# s3bfg

./: .gitignore  Cargo.toml  README.md  disk.md  dns.md  ips.txt  lt.cfn.yaml  mount-nvme.sh  out.txt  paper.md  s3-download.txt  sydney.md
.github/musl/: entrypoint.sh
.github/workflows/: ci.yaml.txt  release.yml  rust.yml
musl/: entrypoint.sh
src/: asynchronous.rs  asynchronous_download.rs  built_info.rs  config.rs  copy_exact.rs  datatype.rs  download_block.rs  empty_file.rs  ips.rs  lib.rs  main.rs  metric_names.rs  metric_observer_progress.rs  metric_observer_ui.rs  metrics_observer_ui.rs  s3_info.rs  s3_ip_pool.rs  s3_request_signed.rs  s3_size.rs  s3_uris.rs  setup_aws_credentials.rs  setup_metrics.rs  setup_tokio.rs  synchronous.rs  ui_console.rs
tests/: aws_actual.rs  cli.rs
