[package]
name = "s3bfg"
version = "0.0.0"
authors = ["Andrew Patterson <andrew@patto.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffer = "*"
clap = "3.0.0-beta.1"
hdrhistogram = "*"
http = "*"
httparse = "*"
humansize = "*"
humantime = "*"
futures = "*"
indicatif = "*"
log = "*"
metrics-core = "*"
metrics-runtime = "*"
metrics-util = "*"
nix = "*"
ordered-float ="*"
rand = "*"
rayon = "*"
regex = "*"
rusoto_core = "*"
rusoto_credential = "*"
rusoto_s3 = "*"
rusoto_sts = "*"
rustls = "*"
serde_yaml = "*"
simple-error = "*"
socket2 = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["compat"] }
tokio-rustls = "*"
trust-dns-client = "*"
ureq = { version = "*", features = ["json"] }
webpki = "*"
webpki-roots = "*"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
