[package]
name = "s3bfg"
# in development build this is left at 0.0.0
# in CI we replace this with a real version
version = "0.0.0"
authors = ["andrewpatto"]
edition = "2018"
build = "build.rs"

[dependencies]
buffer = "*"
clap = "3.0.0-beta.1"
hdrhistogram = "*"
http = "*"
httparse = "*"
humansize = "*"
humantime = "*"
futures = "*"
indicatif = "*"
lazy_static = "*"
log = "*"
metrics-core = "*"
metrics-runtime = "*"
metrics-util = "*"
nix = "*"
ordered-float ="*"
rand = "*"
rayon = "*"
regex = "*"
rusoto_core = "*"
rusoto_credential = "*"
rusoto_s3 = "*"
rusoto_sts = "*"
rustls = "*"
serde_yaml = "*"
simple-error = "*"
socket2 = "*"
thread-id = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["compat"] }
tokio-rustls = "*"
trust-dns-client = "*"
ureq = { version = "*", features = ["json"] }
webpki = "*"
webpki-roots = "*"

[build-dependencies]
built = "0.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
